bookinfo/src/harbor/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - harbor.banjo.opsta.in.th
    secretName: tls-secret
  rules:
  - host: harbor.banjo.opsta.in.th
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 8080
